fix navbar gap

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -442,7 +442,7 @@ footer .contacts a:active {
 
 .header-placeholder {
     width: 100%;
-    height: 194px;
+    height: 174px;
 }
 
 .navbar {
